# qt5

./: .commit-template  .gitattributes  .gitignore  .gitmodules  BUILD_JENKINS.bat  BUILD_QT.bat  BUILD_QT_DLL.bat  CMakeLists.txt  CONTRIBUTING.md  ConsolidateArtifacts.bat  LICENSE.GPLv2  README  README.git  README.md  README.md.template  _clang-format  build  build.dependencies  conanfile_profiles.py  configure  configure.bat  configure.json  fix-webkit  init-repository  init-repository.bat  package.json  publish_binary_on_windows.bat  publish_package.sh  qt.pro  qt5-my  qtwebkit.pri
.github/: pull_request_template.md
.github/workflows/: build.yml  build_qmlls.yaml
cmake/: ECMOptionalAddSubdirectory.cmake  QtIRCommandLineHelpers.cmake  QtIRGitHelpers.cmake  QtIRHelp.txt  QtIRHelpers.cmake  QtIROptionsHelpers.cmake  QtIRParsingHelpers.cmake  QtIRProcessHelpers.cmake  QtIRScript.cmake  QtSortModuleDependencies.cmake  QtSynchronizeRepo.cmake  QtTopLevelConfigureScript.cmake  QtTopLevelHelpers.cmake  QtWriteArgsFile.cmake  TopologicalSort.cmake  qt_attribution.json
coin/: README  module_config.yaml
coin/conan/profiles/: ci-linux-developer-x86_64-gcc  ci-linux-webassembly-x86_64-clang  ci-linux-webassembly-x86_64-gcc  ci-linux-x86_64-gcc  ci-linux-x86_64-gcc-debug-developer  ci-macos-ios-arm64-clang  ci-macos-universal-clang  ci-macos-webassembly-x86_64-clang  ci-unix-android-arm64-clang  ci-unix-android-armv7-clang  ci-unix-android-x86-clang  ci-unix-android-x86_64-clang  ci-windows-android-arm64-clang  ci-windows-android-armv7-clang  ci-windows-android-x86-clang  ci-windows-android-x86_64-clang  ci-windows-arm64-msvc2019_64  ci-windows-webassembly-x86_64-clang  ci-windows-x86_64-mingw  ci-windows-x86_64-msvc2019_64  ci-windows-x86_64-msvc2019_64-developer  linux-developer-x86_64-gcc  linux-webassembly-x86_64-clang  linux-webassembly-x86_64-gcc  linux-x86_64-gcc  linux-x86_64-gcc-debug-developer  macos-ios-arm64-clang  macos-universal-clang  macos-webassembly-x86_64-clang  unix-android-arm64-clang  unix-android-armv7-clang  unix-android-x86-clang  unix-android-x86_64-clang  windows-android-arm64-clang  windows-android-armv7-clang  windows-android-x86-clang  windows-android-x86_64-clang  windows-arm64-msvc2019_64  windows-webassembly-x86_64-clang  windows-x86_64-mingw  (+2 more)
coin/instructions/: coin_bic_tests.yaml  coin_qt_build_docs.yaml  coin_qt_build_template.yaml  coin_qt_configure.yaml  prepare_configure_executable.yaml
coin/platform_configs/: address_sanitizer_platforms.yaml  cmake_platforms.yaml  cmake_platforms_qemu.yaml  cmake_platforms_qemu_qnx710.yaml  cmake_platforms_qemu_vxworks.yaml  cmake_platforms_qemu_vxworks_buildtest.yaml  cmake_platforms_qemu_vxworks_buildtest_static.yaml  cmake_platforms_qemu_vxworks_tests.yaml  cmake_platforms_qemu_vxworks_tests_static.yaml  cmake_platforms_static_release.yaml  cmake_platforms_static_tests.yaml  cmake_platforms_target_android.yaml  cmake_platforms_target_android_12.yaml  cmake_platforms_target_android_12_insignificant.yaml  cmake_platforms_target_android_host_linux.yaml  cmake_platforms_target_android_host_macos.yaml  cmake_platforms_target_android_host_windows.yaml  cmake_platforms_wasm.yaml  default.txt  default.yaml  doc.yaml  flashing-wizard.yaml  installer-framework.yaml  integrity.yaml  ios-tests.yaml  linux_android_tests.yaml  linux_android_tests_developer.yaml  linux_android_tests_multi_abi.yaml  macos-developer-build-tests.yaml  macos-universal-build-tests.yaml  macos.yaml  meta-boot2qt-st.yaml  meta-boot2qt.txt  meta-boot2qt.yaml  meta-qt6.yaml  nightly_cmake_platforms_target_android_latest.yaml  nightly_macos.yaml  nightly_macos13.yaml  nightly_macos14.yaml  nightly_macos14_arm.yaml  (+78 more)
coin/pre-provisioning/qtci-linux-CENTOS-8.1-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-CentOS-8.3-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-8.10-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-8.2-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-8.4-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-8.6-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-8.8-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-9.0-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-RHEL-9.2-x86_64/: 01-disable-automounting.sh  README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-SLES-15_SP2-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-SLES-15_SP3-x86_64/: README_MANUAL_INSTALLATIONS
coin/pre-provisioning/qtci-linux-SLES-15_SP4-x86_64/: README_MANUAL_INSTALLATIONS
jenkins/: config.json  version.json
patches/qtwebkit/: 0003-Make-WebKit-compile-with-modularized-Qt-with-prefix.patch  0004-Avoided-ASCII-cast-warnings-for-WebKit.patch  0005-Properly-detect-phonon-include-and-avoid-double-qtLi.patch  0006-Fix-link-issues-on-Mac.patch  0007-Made-sure-that-qbase.pri-is-loaded-before-WebKit.pri.patch  0008-WebCore-is-a-static-library-so-don-t-load-qt_module..patch  0009-Removed-modular-references-after-support-for-the-fla.patch  0010-Install-correct-header-files-for-webkit.patch  0011-Remove-the-reference-to-modular-for-install_name-fla.patch  0012-Switched-to-using-QT.webkit.imports-variable.patch  0013-QtWebKit-Windows-Link-with-Advapi32.patch  0014-QtWebKit-Windows-Use-jom-instead-of-nmake-if-present.patch  0015-Disable-QMAKE_BUNDLE_DATA-the-webkit-project-file.patch
(+1746 files in other folders)
